--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sherpa-day-prueba",
+  "name": "sherpa-day",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "@npm-bbta/bbog-dig-dt-sherpa-lib": "^6.0.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
