--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": false
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
@@ -28,10 +31,22 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "**/*",
+                "input": "./node_modules/@npm-bbta/bbog-dig-dt-webcomponents-lib/dist/collection/assets/",
+                "output": "./assets"
+              },
+              {
+                "glob": "**/*",
+                "input": "./node_modules/~@npm-bbta/bbog-dig-dt-sherpa-lib/dist/collection/assets/",
+                "output": "./assets"
+              }
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/@npm-bbta/bbog-dig-dt-webcomponents-lib/dist/bdb-webcomponents/bdb-webcomponents.css",
+              "node_modules/@npm-bbta/bbog-ate-disbursement-wc-lib-web-ui/dist/bbog-ate-disbursement-wc-lib-web-ui/bbog-ate-disbursement-wc-lib-web-ui.css"
             ],
             "scripts": []
           },
@@ -99,7 +114,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/@npm-bbta/bbog-dig-dt-webcomponents-lib/dist/bdb-webcomponents/bdb-webcomponents.css",
+              "node_modules/@npm-bbta/bbog-ate-disbursement-wc-lib-web-ui/dist/bbog-ate-disbursement-wc-lib-web-ui/bbog-ate-disbursement-wc-lib-web-ui.css"
             ],
             "scripts": []
           }
