--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,12 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "**/*",
+                "input": "./node_modules/@npm-bbta/bbog-dig-dt-sherpa-lib/dist/collection/assets/",
+                "output": "./assets"
+              }
             ],
             "styles": [
               "src/styles.scss"
@@ -99,7 +104,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/@npm-bbta/bbog-dig-dt-sherpa-lib/dist/bbog-dig-dt-sherpa-lib/bbog-dig-dt-sherpa-lib.css"
             ],
             "scripts": []
           }
