--- a/angular.json
+++ b/angular.json
@@ -34,14 +34,18 @@
               "src/assets",
               {
                 "glob": "**/*",
-                "input": "./node_modules/@npm-bbta/bbog-dig-dt-sherpa-lib/dist/collection/assets/",
+                "input": "./node_modules/@npm-bbta/bbog-dig-dt-webcomponents-lib/dist/collection/assets/",
+                "output": "./assets"
+              },
+              {
+                "glob": "**/*",
+                "input": "./node_modules/~@npm-bbta/bbog-dig-dt-sherpa-lib/dist/collection/assets/",
                 "output": "./assets"
               }
             ],
             "styles": [
               "src/styles.scss",
-              "node_modules/@npm-bbta/bbog-dig-dt-webcomponents-lib/dist/bdb-webcomponents/bdb-webcomponents.css",
-              "node_modules/@npm-bbta/bbog-ate-disbursement-wc-lib-web-ui/dist/bbog-ate-disbursement-wc-lib-web-ui/bbog-ate-disbursement-wc-lib-web-ui.css"
+              "node_modules/@npm-bbta/bbog-dig-dt-sherpa-lib/dist/bbog-dig-dt-sherpa-lib/bbog-dig-dt-sherpa-lib.css"
             ],
             "scripts": []
           },
@@ -106,7 +110,17 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "**/*",
+                "input": "./node_modules/@npm-bbta/bbog-dig-dt-webcomponents-lib/dist/collection/assets/",
+                "output": "./assets"
+              },
+              {
+                "glob": "**/*",
+                "input": "./node_modules/~@npm-bbta/bbog-dig-dt-sherpa-lib/dist/collection/assets/",
+                "output": "./assets"
+              }
             ],
             "styles": [
               "src/styles.scss",
